--- a/src/app/date-picker/date-picker.component.css
+++ b/src/app/date-picker/date-picker.component.css
@@ -9,9 +9,12 @@ table {
   visibility: hidden;
 }
 
-th, td {
+th,
+td {
   text-align: center;
   padding: 8px;
 }
 
-tr:nth-child(even) {background-color: #f2f2f2;}
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
