code review refactored

--- a/src/app/date-picker/date-picker.component.html
+++ b/src/app/date-picker/date-picker.component.html
@@ -5,7 +5,7 @@
     [matDatepicker]="datePicker1"
     [min]="minDate"
     [max]="maxDate"
-    (dateChange)="addEvent1('change', $event)"
+    (dateChange)="startDateChange($event)"
   />
   <mat-datepicker-toggle matSuffix [for]="datePicker1"></mat-datepicker-toggle>
   <mat-datepicker #datePicker1></mat-datepicker>
@@ -13,13 +13,7 @@
 
 <mat-form-field appearance="fill">
   <mat-label>Data Final</mat-label>
-  <input
-    matInput
-    [matDatepicker]="datePicker2"
-    [min]="minDate"
-    [max]="maxDate"
-    (dateChange)="addEvent2('change', $event)"
-  />
+  <input matInput [matDatepicker]="datePicker2" [min]="minDate" [max]="maxDate" (dateChange)="endDateChange($event)" />
   <mat-datepicker-toggle matSuffix [for]="datePicker2"></mat-datepicker-toggle>
   <mat-datepicker #datePicker2></mat-datepicker>
 </mat-form-field>
@@ -28,11 +22,11 @@
   <li> Data: {{ i.data }} | Taxa: {{ i.valor }} </li>
 </ul-->
 
-<table id="tabela" style="width: 33%">
+<table id="tabela" style="width: 33%" [hidden]="hidden">
   <th>Data</th>
   <th>Valor</th>
   <tr *ngFor="let i of selics">
-    <td>{{ i.data }}</td>
+    <td>{{ i.data | date: 'shortDate' }}</td>
     <td>{{ i.valor }}</td>
   </tr>
 </table>
