--- a/src/app/date-picker/date-picker.component.css
+++ b/src/app/date-picker/date-picker.component.css
@@ -1,10 +1,9 @@
-.mat-form-field {
+mat-form-field {
   margin-right: 20px;
 }
 
 table {
   text-align: center;
-  width: 100%;
   overflow: auto;
 }
 
