--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-date-picker></app-date-picker>
+<!-- <h1>
+  {{title}}
+</h1> -->
+
+<button routerLink="/date-picker">Date Picker</button>
+<button routerLink="">Home</button>
+
+<router-outlet></router-outlet>
