Spliting date picker component code between this and selic component. Also, migrating translate to app component (solução de contorno)

--- a/src/app/date-picker/date-picker.component.html
+++ b/src/app/date-picker/date-picker.component.html
@@ -18,14 +18,4 @@
   <mat-datepicker #datePicker2></mat-datepicker>
 </mat-form-field>
 
-<mat-progress-spinner mode="indeterminate" diameter="70" style="margin: 0 215px" *ngIf="hiddenLoader">
-</mat-progress-spinner>
-
-<table id="tabela" style="width: 33%" [hidden]="hidden">
-  <th>{{ 'table.date' | translate }}</th>
-  <th>{{ 'table.value' | translate }}</th>
-  <tr *ngFor="let i of selicData">
-    <td>{{ i.data | date: 'shortDate' }}</td>
-    <td>{{ i.valor }}</td>
-  </tr>
-</table>
+<app-selic [startDate]="startDate" [endDate] ="endDate" [ready]="ready"></app-selic>
