Calling RequestSelic through ngOnChanges

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
-<!-- <h1>
-  {{title}}
-</h1> -->
-
-<button routerLink="/date-picker">Date Picker</button>
-<button routerLink="">Home</button>
+<p><button routerLink="/date-picker">Date Picker</button>
+<button routerLink="">Home</button></p>
 
 <router-outlet></router-outlet>
