--- a/src/app/date-picker/date-picker.component.html
+++ b/src/app/date-picker/date-picker.component.html
@@ -18,4 +18,4 @@
   <mat-datepicker #datePicker2></mat-datepicker>
 </mat-form-field>
 
-<app-selic [startDate]="startDate" [endDate] ="endDate" [ready]="ready"></app-selic>
+<app-selic [startDate]="startDate" [endDate]="endDate"></app-selic>
