Refactoring Selic and DatePicker components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<p><button routerLink="/date-picker">Date Picker</button>
+<p><button routerLink="/selic">Selic</button>
 <button routerLink="">Home</button></p>
 
 <router-outlet></router-outlet>
