--- a/src/app/selic/selic.component.html
+++ b/src/app/selic/selic.component.html
@@ -1,3 +1,5 @@
+<app-date-picker (dateRangeChange)="onDateRangeChange($event)"></app-date-picker>
+
 <mat-progress-spinner mode="indeterminate" diameter="70" style="margin: 0 215px" *ngIf="hiddenLoader">
 </mat-progress-spinner>
 
